# hanabi-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  README.md  hanabi.cppm  main.cpp
frontend_web/: Justfile  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend_web/src/: App.tsx  index.css
frontend_web/src/components/: Board.tsx  Card.tsx  DiscardPile.tsx  GameLog.tsx  HanabiGame.tsx  PlayerHand.tsx  Stack.tsx  StatusBar.tsx  Token.tsx
frontend_web/src/components/Base/: Footer.tsx  NavigationBar.tsx
frontend_web/src/components/GameSession/: Action.tsx  Board.tsx  DiscardPile.tsx  DrawPile.tsx  GameLog.tsx  PlayerHand.tsx  Stack.tsx
frontend_web/src/components/Lobbies/: CreateLobbyModal.tsx  LobbyDetails.tsx  LobbyListing.tsx
frontend_web/src/constants/: defaultSettings.ts  mockDiscardPile.ts  mockGameLog.ts  mockLobbies.ts  mockPlayers.ts  mockStacks.ts
frontend_web/src/pages/: GameSession.tsx  Lobbies.tsx
frontend_web/src/styles/: main.css
frontend_web/src/styles/components/gamesession/: Game.css
frontend_web/src/styles/components/home/: Footer.css  NavigationBar.css
frontend_web/src/styles/components/lobbies/: Lobby.css
frontend_web/src/types/: Game.ts  Lobby.ts  User.ts  index.ts
hanabi/: CMakeLists.txt  main.cpp  pyproject.toml
hanabi-plus/: CMakeLists.txt
hanabi-plus/src/game/: Game.h
hanabi-plus/src/server/: RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  Session.h  main.cpp
hanabi-simulator/: pyproject.toml
hanabi-simulator/src/hanabi_simulator/: __init__.py
hanabi/hanabipy/: __init__.py
hanabi/include/: game.h
hanabi/src/: Game.cpp  Game.h  Pile.cpp  Pile.h  utils.h
hanabi/src/hanabi/: game.cpp
hanabi/src/hanabipy/: hanabipy.cpp
hanabi_py/: CMakeLists.txt  hanabi_py.cpp  pyproject.toml
hanabi_sim/: pyproject.toml
hanabi_sim/src/hanabi_sim/: __init__.py  main.py
server/: CMakeLists.txt
server/src/: LobbyManager.cpp  LobbyManager.h  RequestHandler.cpp  Server.cpp  Session.cpp  SessionManager.cpp  SessionManager.h  main.cpp
