[project]
name = "hanabi-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "angiokas", email = "angiokas@pm.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hanabi-simulator = "hanabi_simulator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
hanabi_plus_py = { path = "../hanabi_plus_py" }